# Визначення мінімальної версії CMake
cmake_minimum_required(VERSION 3.27)

# Назва проєкту (можете змінити, наприклад, на lab_11_2)
project(Lab_11_2 CXX)

# Визначення стандарту C++
set(CMAKE_CXX_STANDARD 17)

# ----------------------------------------------------------------------
# 1. СЕКЦІЯ ОСНОВНОЇ ПРОГРАМИ
# ----------------------------------------------------------------------

# Створення виконуваного файлу для основної програми
add_executable(
        lab_11_2_main_app
        main.cpp
        lab_11_2.cpp
)

# ----------------------------------------------------------------------
# 2. СЕКЦІЯ ЮНІТ-ТЕСТІВ (Google Test)
# ----------------------------------------------------------------------

# Знайти пакети Google Test (потрібно для юніт-тестів)
find_package(GTest CONFIG REQUIRED)

# Створення виконуваного файлу для тестів
# Важливо: включаємо і UnitTest.cpp, і lab_11_2.cpp (бо він містить реалізацію функцій)
add_executable(
        unit_test_runner
        UnitTest.cpp
        lab_11_2.cpp
)

# Зв'язування тестового виконавчого файлу з бібліотекою GTest
target_link_libraries(
        unit_test_runner
        GTest::gtest_main
)

# ----------------------------------------------------------------------